# kilo-namespace-packages

./: .gitignore  README.md
apps/app1/: pyproject.toml
apps/app1/kilo/app1/: apps.py  models.py  views.py
apps/app1/kilo/app1/migrations/: 0001_initial.py
apps/app2/: pyproject.toml
apps/app2/app2/: models.py  views.py
apps/app2/kilo/app2/: apps.py
apps/app2/kilo/app2/migrations/: 0001_initial.py
lib/subpackage1/: pyproject.toml
lib/subpackage2/: pyproject.toml
lib/subpackage2/kilo/subpackage2/: morefunctions.py
services/restserver/: pyproject.toml
services/restserver/restserver/: asgi.py  settings.py  urls.py  wsgi.py
